# T.T.B.G

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
T.T.B.G/: app_entry.cpp
T.T.B.G-API/core/: data_defines.h
T.T.B.G-API/core/CDABNG/: TimeLine.h  _CDABNG.h
T.T.B.G-API/core/GA/: Individual.cpp  Individual.h  Population.cpp  Population.h  _GA.cpp  _GA.h
T.T.B.G-API/core/utils/files/: file_util.h
T.T.B.G-API/core/utils/files/csv/: csv.h  csv_loader.cpp  csv_loader.h  csv_saver.cpp  csv_saver.h
T.T.B.G-API/core/utils/include_bundles/: GA_bundle.h  all_bundle.h  utils_bundle.h
T.T.B.G-API/core/utils/misc/: finder.h  json.hpp  random_rework.h  string_util.h
T.T.B.G-API/core/utils/time/: Timer.h
T.T.B.G-API/driver/: API_driver.cpp  API_driver.h
T.T.B.G/api/core/data/: Course.h  CourseClass.h  Grade.h  Room.h  School.h  Teacher.h
T.T.B.G/api/core/utils/files/: File_Manager.cpp  File_Manager.h
T.T.B.G/api/core/utils/include_bundles/: utils_bundle.h
T.T.B.G/api/core/utils/log/: Log.h
T.T.B.G/ui/: DashBoard.cpp  DashBoard.h
TTBG_autogen/: mocs_compilation.cpp
TTBG_autogen/YHUOQNENPI/: moc_DashBoard.cpp
dummy_data/: .~lock.CLASSES MASTERS TIMETABLE (copy).xlsx#  06-09-2017 TimeTable for Activity(BOYS)  updated(1).xlsx  ARABIC-URDU-DEEN-ISLAMIC Timetables (BOYS) (1) (1).xlsx  CLASSES MASTERS TIMETABLE (copy).xlsx  CLASSES MASTERS TIMETABLE.xlsx  TEACHERS MASTERS TIMETABLE(2).xlsx
notes/: CDABNG-Algo-notes.md  README.md  rules.txt  timetable_making.ods
